--- a/Pig GAme/style.css
+++ b/Pig GAme/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap'); */
 
 * {
   margin: 0;
@@ -165,3 +165,12 @@ main {
   font-weight: 700;
   color: #c7365f;
 }
+
+.hidden {
+  display: none;
+}
+
+
+
+
+
